Project3/Parse/MiniJavaParser.jj
/* Copyright (C) 2007, 2013, Marquette University.  All rights reserved. */
/* 2013 Jan 30 : Includes Xinu.* external calls and Concurrency syntax.  */

/**
 * COSC 4400 - Project #3
 * Scanner accepts input from user
 * @authors [Aleksandro Zhaka, Christian Guzman ]
 * Instructor [Dennis Brylow]
 * TA-BOT:MAILTO [aleksandro.zhaka@marquette.edu, christian.guzmanrivas@marquette.edu>
 */

PARSER_BEGIN(MiniJavaParser)
  package Parse;
  import java.util.LinkedList;
  public class MiniJavaParser {}
PARSER_END(MiniJavaParser)

TOKEN_MGR_DECLS :
{
    static boolean anyErrors = false;
    static void error(String msg)
	{
        	anyErrors = true;
        	System.err.println(msg + ": line " + input_stream.getEndLine()
                           + ", column " + input_stream.getEndColumn());
    	}
}

/****************/
/* White space. */
/****************/
SKIP :
{
	  " " | "\t" | "\n" | "\r" | "\f" 
	  | < "//" (~["\n","\r"])* ("\n" | "\r" | "\r\n")? >
	  | < "/*" (~["*"])* "*" (("*")* (~["*","/"] (~["*"])*)? "*")* "/" >
}

/*************************/
/* Lexical Specification */
/*************************/

TOKEN :
{
	/* Reserved words. */
	  < "class" >
	| < "public" >
	| < "static" >
	| < "true" >
	| < "false" >
	| < "this" >
	| < "null" >
	| < "while" >
	| < "if" >
	| < "else" >

	/* Types. */
	| < "void" >
	| < "int" >
	| < "boolean" >

	/* Operators. */
	| < "." >
	| < "=" >
	| < "+" >
	| < "-" >
	| < "*" >
	| < "/" >
	| < "&&" >
	| < "||" >
	| < "==" >
	| < ">" >
	| < "<" >
	| < "!" >

	/* Grouping tokens. */
	| < "{" >
	| < "}" >
	| < "(" >
	| < ")" >
	| < "[" >
	| < "]" >
	| < ";" >
	| < "," >

	/* Reserved words that aren't really reserved in Java. */
	| < "main" >
	| < "String" > 
	| < "Thread" > 
	| < "Xinu" >
	| < "new" >
	| < "extends" >
	| < "synchronized" >
	| < "return" > 
}


/************/
/* Literals */
/************/

TOKEN :
{
	  < INT: ( "0" | ["1"-"9"] (["0"-"9"])* ) >
	| < STRING: "\"" (~["\""])*  "\"" >
}


/***************/
/* Identifiers */
/***************/
TOKEN :
{
	  < ID: <LETTER> (<LETTER>|<DIGIT>|<UNDER>)* >
	| < #LETTER: ["A"-"Z","a"-"z"] >
	| < #DIGIT: ["0"-"9"] >
	| < #UNDER: "_" >
}

<DEFAULT>
SKIP :
{
  <~[]> { error("Illegal token"); }
}

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration | ThreadDeclaration )* <EOF>
Absyn.Program Goal() :
{
	LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
}
{
	
	MainClassDeclaration(cl) 
	(
		LOOKAHEAD(ThreadDeclaration())
		ThreadDeclaration(cl) 
		|ClassDeclaration(cl)
		
	)*
	 <EOF>
	{ return new Absyn.Program(cl); }
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) :
{
	Absyn.ClassDecl  cd;
	Absyn.Stmt stmt;
	Absyn.VarDecl var;
	Token name, arg;
	LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
	LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
	LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
	LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
}
{
  "class" name = <ID> "{" "public" "static" "void" "main"
	"(" "String" "[" "]" arg = <ID> ")"
	{ formals.add(new Absyn.Formal(
			new Absyn.ArrayType(	
				new Absyn.IdentifierType("String")),
					arg.toString())); }
	"{" (LOOKAHEAD(VarDeclaration()) var = VarDeclaration()
		{ locals.add(var); } )*
	(stmt = Statement() { stmts.add(stmt); } )*
	"}" "}"

	{
		methods.add(new Absyn.MethodDecl(null, false, "main", formals,
				locals, stmts, new Absyn.IntegerLiteral(0)));
		cd = new Absyn.ClassDecl(name.toString(),
						null,
						new LinkedList<Absyn.VarDecl>(), methods);
		cl.add(cd);
		return cd;
	}
	//ClassDeclaration	::=	"class" <ID> ( "extends" <ID> )? "{" ( FieldDeclaration | MethodDeclaration )* "}"
}

Absyn.ClassDecl ClassDeclaration(LinkedList<Absyn.ClassDecl> cl) :
{
	Absyn.ClassDecl  cd;
	Absyn.Stmt stmt;
	Absyn.MethodDecl var;
	Token name, name2, arg;
	LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
}
{
  "class" name = <ID> ["extends" name2 = <ID>]"{"
  (
	FieldDeclaration()
	|var = MethodDeclaration()
	{methods.add(var);}
  )*
  "}"
	{
		cd = new Absyn.ClassDecl(name.toString(),
						null,
						new LinkedList<Absyn.VarDecl>(), methods);
		cl.add(cd);
		return cd;
	}
}

Absyn.ThreadDecl ThreadDeclaration(LinkedList<Absyn.ClassDecl> cl) :
{
	Absyn.ThreadDecl  cd;
	Absyn.MethodDecl var;
	Token name;
	LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
	LinkedList<Absyn.VarDecl> locals = new LinkedList<Absyn.VarDecl>();
	Absyn.VarDecl var2;

}
{
  "class" name = <ID> "extends" "Thread" "{"
  (
	LOOKAHEAD(FieldDeclaration())
	var2 = FieldDeclaration(){locals.add(var2);}
	|LOOKAHEAD(2)
	var = MethodDeclaration(){methods.add(var);}
	|var = VoidDeclaration() {methods.add(var);}
  )*
  "}"
	{
		cd = new Absyn.ThreadDecl(name.toString(),"Thread",locals, methods);
		cl.add(cd);
		return cd;
	}
}

Absyn.MethodDecl MethodDeclaration():
{
	boolean synced = false;
	Absyn.Type type, argsType;
	Absyn.Stmt stmt;
	Absyn.VarDecl var;
	Token name, arg;
	LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
	LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
	LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
	Absyn.Expr e1;
	Absyn.Formal formal;
}
{
	"public" ["synchronized" {synced = true;}] type = Type() name = <ID>
	"(" 
	[
		argsType = Type() arg = <ID>  
		{formal = new Absyn.Formal(argsType, arg.toString()); formals.add(formal);} 
		("," argsType = Type() arg = <ID>  
		{formal = new Absyn.Formal(argsType, arg.toString()); formals.add(formal);})*
	] 
	")" 
	"{" (LOOKAHEAD(VarDeclaration()) var = VarDeclaration()
		{ locals.add(var); } )*
		(stmt = Statement() { stmts.add(stmt); } )*
	"return"  e1 = Expression()";"
	 "}" {return new Absyn.MethodDecl(type,synced,name.toString(),formals,locals,stmts,e1);}
}

Absyn.VarDecl FieldDeclaration():
{
	Absyn.Type type;
	Token name;
}
{
	type = Type() name = <ID> ";" {return new Absyn.VarDecl(type,name.toString(),null);}
}

Absyn.VoidDecl VoidDeclaration() :
{
	Absyn.Stmt stmt;
	Token name;
	Absyn.VarDecl var;
	LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
	LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
}
{
  "public" "void" name = <ID> "(" ")" "{" 
  (LOOKAHEAD(VarDeclaration()) var = VarDeclaration()
		{ locals.add(var); } )*
		(stmt = Statement() { stmts.add(stmt); } )*
	 "}" {return new Absyn.VoidDecl(null,false,name.toString(),null,locals,stmts,null);}
}
//MethodDeclaration	::=	"public" ( "synchronized" )? 
//Type <ID> "(" ( Type <ID> ( "," Type <ID> )* )? ")" "{" ( VarDeclaration )* ( Statement )* "return" Expression ";" "}" 

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
Absyn.VarDecl VarDeclaration() :
{
	Absyn.Type type = null;
	Token      name = null;
	Absyn.Expr init = null;
}
{
	type = Type() name = <ID> [ "=" init = Expression() ] ";"
	{ return new Absyn.VarDecl(type, name.toString(), init); }
}

Absyn.Type Type() :
{
	Absyn.Type type;
}
{
	type = BaseType()
	( "[" "]" { type = new Absyn.ArrayType(type); } )*
	{ return type; }
}

Absyn.Type BaseType() :
{
	Token name;
}
{
	name = <"boolean">	{ return new Absyn.BooleanType(); }
	| name=<"int">	{ return new Absyn.IntegerType(); }
	| name=<ID>	{ return new Absyn.IdentifierType(name.toString()); }
}

Absyn.Stmt Statement() :
{
	Absyn.Stmt stmt;
}
{
	stmt = BlockCallStatement() {return stmt; }
	|stmt = XinuCallStatement()	{ return stmt; }
	|stmt = WhileCallStatement() {return stmt; }
	|stmt = IfCallStatement() {return stmt; }
	|stmt = AssignCallStatement() {return stmt; }
}

Absyn.AssignStmt AssignCallStatement() :
{
	Absyn.Expr arg1, arg2;
}
{
	arg1 = Expression() <"="> arg2 = Expression() <";">{ return new Absyn.AssignStmt((Absyn.AssignableExpr)arg1, arg2); }
}

Absyn.BlockStmt BlockCallStatement() :
{
	Absyn.Stmt stmt;
	LinkedList<Absyn.Stmt> stmts = new LinkedList<Absyn.Stmt>();
}
{
	"{" ( stmt = Statement()  { stmts.add(stmt); } )*
	"}"{ return new Absyn.BlockStmt(stmts); }
}

Absyn.IfStmt IfCallStatement() :
{
	Absyn.Expr test;
	Absyn.Stmt thenStm;
	Absyn.Stmt elseStm = null;
}
{
	<"if"> <"("> test = Expression() <")"> thenStm = Statement()
	[ <"else"> elseStm = Statement() ]
	
	{ return new Absyn.IfStmt(test, thenStm, elseStm); }
}

Absyn.WhileStmt WhileCallStatement() :
{
	Absyn.Expr test;
	Absyn.Stmt body;
}
{
	<"while"> <"("> test = Expression() <")"> body = Statement() { return new Absyn.WhileStmt(test, body); }
}

Absyn.XinuCallStmt XinuCallStatement() :
{
	Token method;
	Absyn.Expr arg;
	LinkedList<Absyn.Expr> args = new LinkedList<Absyn.Expr>();
}
{
	"Xinu" "." method = <ID> 
	"(" [ arg = Expression() { args.add(arg); }
		( "," arg = Expression()  { args.add(arg); } )* ]
	")" ";" { return new Absyn.XinuCallStmt(method.toString(), args); }
}
//<VARDECL> := <E>
Absyn.Expr Expression():
{
	Absyn.Expr e;
}
{
	e = OrExpr() {return e;}
}

Absyn.Expr OrExpr():
{
	Absyn.Expr e1,e2;

}
{
	e1 = AndExpr() 
	(
	 <"||"> e2 = AndExpr() { e1 = new Absyn.OrExpr(e1,e2);}
	)*
	{return e1;}
}

Absyn.Expr AndExpr():
{
	Absyn.Expr e1,e2;

}
{
	e1 = EqualExpr() 
	(
	 <"&&"> e2 = EqualExpr() { e1 = new Absyn.AndExpr(e1,e2);}
	)*
	{return e1;}
}

Absyn.Expr EqualExpr():
{
	Absyn.Expr e1,e2;

}
{
	e1 = RelationalExpr() 
	(
	 <"=="> e2 = RelationalExpr() { e1 = new Absyn.EqualExpr(e1,e2);}
	| <"!="> e2 = RelationalExpr() { e1 = new Absyn.NotEqExpr(e1,e2);}
	)*
	{return e1;}
}

Absyn.Expr RelationalExpr():
{
	Absyn.Expr e1,e2;

}
{
	e1 = AdditiveExpr() 
	(
	 <">"> e2 = AdditiveExpr() { e1 = new Absyn.GreaterExpr(e1,e2);}
	|<"<"> e2 = AdditiveExpr() { e1 = new Absyn.LesserExpr(e1,e2);}
	)*
	{return e1;}
}

//<E>:= <MulE> + <MulE>
//   || <Mule> - <MulE>
Absyn.Expr AdditiveExpr():
{
	Absyn.Expr e1,e2;
}
{
	e1 = MultiplicativeExpr() 
	(
	 <"+"> e2 = MultiplicativeExpr() { e1 = new Absyn.AddExpr(e1,e2);}
	|<"-"> e2 = MultiplicativeExpr() { e1 = new Absyn.SubExpr(e1,e2);}
	)*
	{return e1;}
}
//<MulE> := <Base> * <Base>
//       || <Base> / <Base>
Absyn.Expr MultiplicativeExpr():
{
	Absyn.Expr e1,e2;
}
{
	e1 = UnaryExpr() 
	(
	 <"*"> e2 = UnaryExpr() { e1 = new Absyn.MulExpr(e1,e2);}
	|<"/"> e2 = UnaryExpr() { e1 = new Absyn.DivExpr(e1,e2);}
	)*
	{return e1;}
}
Absyn.Expr UnaryExpr():
{
    Absyn.Expr e1;
}
{
    (
        <"-"> e1 = UnaryExpr() {e1 = new Absyn.NegExpr(e1);}
      | <"!"> e1 = UnaryExpr() {e1 = new Absyn.NotExpr(e1);}
      | e1 = PostfixExpr()
    )
    {return e1;}
}

Absyn.Expr PostfixExpr():
{
    Absyn.Expr e1, arg;
	Token t;
	LinkedList<Absyn.Expr> args2;
}
{
    e1 = BaseExpr()
	(
		<"."> t = <ID>
		(
			<"(">{args2 = new LinkedList<Absyn.Expr>();} 
				[ arg = Expression() { args2.add(arg); }
				( <","> arg = Expression() { args2.add(arg); } )* ]
				<")"> { e1 = new Absyn.CallExpr(e1, t.toString(), args2); }
			| { e1 = new Absyn.FieldExpr(e1, t.toString()); }
		)
		| <"["> arg = Expression() <"]"> { e1 = new Absyn.ArrayExpr(e1, arg); }
	)*
	{return e1;}
}


//Base := <ID>
//     || <INT>
//     || <STRING>
//     || "true"
//     || "false"
//     || "this"
//     || "null"
Absyn.Expr BaseExpr():
{
	Token t, name;
	Absyn.Expr e1, arg;
	Absyn.Type type2;
	LinkedList<Absyn.Expr> args3;
}
{
		<"new"> type2 = BaseType() 
		(
			<"("> <")"> { return new Absyn.NewObjectExpr(type2); }
 
			| <"["> arg = Expression() <"]"> 
				{args3 = new LinkedList<Absyn.Expr>(); args3.add(arg); }
				( <"["> <"]"> {args3.add(null);} )*
				{ return new Absyn.NewArrayExpr(type2, args3); }
		)
		| <"Xinu"> <"."> name = <ID>
			<"(">{args3 = new LinkedList<Absyn.Expr>();} 
			[ arg = Expression() { args3.add(arg); }
			( <","> arg = Expression() { args3.add(arg); } )* ]
			<")"> { return new Absyn.XinuCallExpr(name.toString(), args3); }
		| <"("> e1 = Expression() <")"> { return e1; }
		| t=<ID> { return new Absyn.IdentifierExpr(t.toString()); }
		| t=<INT> { return new Absyn.IntegerLiteral(new Integer(t.toString())); }
        | t=<STRING> { return new Absyn.StringLiteral(t.toString()); }
		| t=<"true"> { return new Absyn.TrueExpr(); }
		| t=<"false"> { return new Absyn.FalseExpr(); }
		| t=<"this"> { return new Absyn.ThisExpr(); }
		| t=<"null"> { return new Absyn.NullExpr(); }
}
