Project7/Parse/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  package Parse;
  import java.util.LinkedList;
  public class MiniJavaParser implements MiniJavaParserConstants {

/********************/
/* MiniJava Grammar */
/********************/

// Goal 	::= 	MainClass ( ClassDeclaration | ThreadDeclaration )* <EOF>
  static final public Absyn.Program Goal() throws ParseException {LinkedList<Absyn.ClassDecl> cl = new LinkedList<Absyn.ClassDecl>();
    MainClassDeclaration(cl);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 8:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      if (jj_2_1(2147483647)) {
        ThreadDeclaration(cl);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 8:{
          ClassDeclaration(cl);
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(0);
{if ("" != null) return new Absyn.Program(cl);}
    throw new Error("Missing return statement in function");
}

// MainClass 	::= 	"class" Identifier "{" "public" "static" "void" "main" "(" "String" "[" "]" Identifier ")" "{" Statement "}" "}"
  static final public Absyn.ClassDecl MainClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl  cd;
 Absyn.Stmt stmt;
 Absyn.VarDecl var;
 Token name, arg;
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
 LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
    jj_consume_token(8);
    name = jj_consume_token(ID);
    jj_consume_token(33);
    jj_consume_token(9);
    jj_consume_token(10);
    jj_consume_token(18);
    jj_consume_token(41);
    jj_consume_token(35);
    jj_consume_token(42);
    jj_consume_token(37);
    jj_consume_token(38);
    arg = jj_consume_token(ID);
    jj_consume_token(36);
formals.add(new Absyn.Formal(
   new Absyn.ArrayType(
    new Absyn.IdentifierType("String")),
     arg.toString()));
    jj_consume_token(33);
    label_2:
    while (true) {
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_2;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 12:
      case 13:
      case 14:
      case 15:
      case 16:
      case 24:
      case 32:
      case 33:
      case 35:
      case 44:
      case 45:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(34);
    jj_consume_token(34);
methods.add(new Absyn.MethodDecl(null, false, "main", formals,
    locals, stmts, new Absyn.IntegerLiteral(0)));
  cd = new Absyn.ClassDecl(name.toString(),
      null,
      new LinkedList<Absyn.VarDecl>(), methods);
  cl.add(cd);
  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.ClassDecl ClassDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ClassDecl  cd;
 Absyn.Stmt stmt;
 Absyn.MethodDecl var;
 Absyn.VarDecl var2;
 Token name,arg;
 Token name2 = null;
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
 LinkedList<Absyn.VarDecl> fields = new LinkedList<Absyn.VarDecl>();
    jj_consume_token(8);
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 46:{
      jj_consume_token(46);
      name2 = jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(33);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 9:
      case 19:
      case 20:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 19:
      case 20:
      case ID:{
        var2 = FieldDeclaration();
fields.add(var2);
        break;
        }
      case 9:{
        var = MethodDeclaration();
methods.add(var);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(34);
cd = new Absyn.ClassDecl(name.toString(),
      (name2 == null)? null : name2.toString(),
      fields, methods);
  cl.add(cd);
  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.ThreadDecl ThreadDeclaration(LinkedList<Absyn.ClassDecl> cl) throws ParseException {Absyn.ThreadDecl  cd;
 Absyn.MethodDecl var;
 Token name;
 LinkedList<Absyn.MethodDecl> methods = new LinkedList<Absyn.MethodDecl>();
 LinkedList<Absyn.VarDecl> locals = new LinkedList<Absyn.VarDecl>();
 Absyn.VarDecl var2;
    jj_consume_token(8);
    name = jj_consume_token(ID);
    jj_consume_token(46);
    jj_consume_token(43);
    jj_consume_token(33);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 9:
      case 19:
      case 20:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      if (jj_2_3(2147483647)) {
        var2 = FieldDeclaration();
locals.add(var2);
      } else if (jj_2_4(2)) {
        var = MethodDeclaration();
methods.add(var);
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 9:{
          var = VoidDeclaration();
methods.add(var);
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(34);
cd = new Absyn.ThreadDecl(name.toString(),"Thread",locals, methods);
  cl.add(cd);
  {if ("" != null) return cd;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.MethodDecl MethodDeclaration() throws ParseException {boolean synced = false;
 Absyn.Type type, argsType;
 Absyn.Stmt stmt;
 Absyn.VarDecl var;
 Token name, arg;
 LinkedList<Absyn.Formal> formals     = new LinkedList<Absyn.Formal>();
 LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
 Absyn.Expr e1;
 Absyn.Formal formal;
    jj_consume_token(9);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 47:{
      jj_consume_token(47);
synced = true;
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    type = Type();
    name = jj_consume_token(ID);
    jj_consume_token(35);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 19:
    case 20:
    case ID:{
      argsType = Type();
      arg = jj_consume_token(ID);
formal = new Absyn.Formal(argsType, arg.toString()); formals.add(formal);
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 40:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_6;
        }
        jj_consume_token(40);
        argsType = Type();
        arg = jj_consume_token(ID);
formal = new Absyn.Formal(argsType, arg.toString()); formals.add(formal);
      }
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    jj_consume_token(36);
    jj_consume_token(33);
    label_7:
    while (true) {
      if (jj_2_5(2147483647)) {
        ;
      } else {
        break label_7;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 12:
      case 13:
      case 14:
      case 15:
      case 16:
      case 24:
      case 32:
      case 33:
      case 35:
      case 44:
      case 45:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_8;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(48);
    e1 = Expression();
    jj_consume_token(39);
    jj_consume_token(34);
{if ("" != null) return new Absyn.MethodDecl(type,synced,name.toString(),formals,locals,stmts,e1);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.VarDecl FieldDeclaration() throws ParseException {Absyn.Type type;
 Token name;
    type = Type();
    name = jj_consume_token(ID);
    jj_consume_token(39);
{if ("" != null) return new Absyn.VarDecl(type,name.toString(),null);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.VoidDecl VoidDeclaration() throws ParseException {Absyn.Stmt stmt;
 Token name;
 Absyn.VarDecl var;
 LinkedList<Absyn.VarDecl> locals     = new LinkedList<Absyn.VarDecl>();
 LinkedList<Absyn.Stmt> stmts         = new LinkedList<Absyn.Stmt>();
    jj_consume_token(9);
    jj_consume_token(18);
    name = jj_consume_token(ID);
    jj_consume_token(35);
    jj_consume_token(36);
    jj_consume_token(33);
    label_9:
    while (true) {
      if (jj_2_6(2147483647)) {
        ;
      } else {
        break label_9;
      }
      var = VarDeclaration();
locals.add(var);
    }
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 12:
      case 13:
      case 14:
      case 15:
      case 16:
      case 24:
      case 32:
      case 33:
      case 35:
      case 44:
      case 45:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_10;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(34);
{if ("" != null) return new Absyn.VoidDecl(null,false,name.toString(),null,locals,stmts,null);}
    throw new Error("Missing return statement in function");
}

//MethodDeclaration	::=	"public" ( "synchronized" )? 
//Type <ID> "(" ( Type <ID> ( "," Type <ID> )* )? ")" "{" ( VarDeclaration )* ( Statement )* "return" Expression ";" "}" 

// VarDeclaration 	::= 	Type Identifier ( = Expression )? ";"
  static final public Absyn.VarDecl VarDeclaration() throws ParseException {Absyn.Type type = null;
 Token      name = null;
 Absyn.Expr init = null;
    type = Type();
    name = jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 22:{
      jj_consume_token(22);
      init = Expression();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
    jj_consume_token(39);
{if ("" != null) return new Absyn.VarDecl(type, name.toString(), init);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type Type() throws ParseException {Absyn.Type type;
    type = BaseType();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 37:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_11;
      }
      jj_consume_token(37);
      jj_consume_token(38);
type = new Absyn.ArrayType(type);
    }
{if ("" != null) return type;}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Type BaseType() throws ParseException {Token name;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 20:{
      name = jj_consume_token(20);
{if ("" != null) return new Absyn.BooleanType();}
      break;
      }
    case 19:{
      name = jj_consume_token(19);
{if ("" != null) return new Absyn.IntegerType();}
      break;
      }
    case ID:{
      name = jj_consume_token(ID);
{if ("" != null) return new Absyn.IdentifierType(name.toString());}
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.Stmt Statement() throws ParseException {Absyn.Stmt stmt;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 33:{
      stmt = BlockCallStatement();
{if ("" != null) return stmt;}
      break;
      }
    case 44:{
      stmt = XinuCallStatement();
{if ("" != null) return stmt;}
      break;
      }
    case 15:{
      stmt = WhileCallStatement();
{if ("" != null) return stmt;}
      break;
      }
    case 16:{
      stmt = IfCallStatement();
{if ("" != null) return stmt;}
      break;
      }
    case 11:
    case 12:
    case 13:
    case 14:
    case 24:
    case 32:
    case 35:
    case 45:
    case INT:
    case STRING:
    case ID:{
      stmt = AssignCallStatement();
{if ("" != null) return stmt;}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Absyn.AssignStmt AssignCallStatement() throws ParseException {Absyn.Expr arg1, arg2;
    arg1 = Expression();
    jj_consume_token(22);
    arg2 = Expression();
    jj_consume_token(39);
{if ("" != null) return new Absyn.AssignStmt((Absyn.AssignableExpr)arg1, arg2);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.BlockStmt BlockCallStatement() throws ParseException {Absyn.Stmt stmt;
 LinkedList<Absyn.Stmt> stmts = new LinkedList<Absyn.Stmt>();
    jj_consume_token(33);
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 11:
      case 12:
      case 13:
      case 14:
      case 15:
      case 16:
      case 24:
      case 32:
      case 33:
      case 35:
      case 44:
      case 45:
      case INT:
      case STRING:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_12;
      }
      stmt = Statement();
stmts.add(stmt);
    }
    jj_consume_token(34);
{if ("" != null) return new Absyn.BlockStmt(stmts);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.IfStmt IfCallStatement() throws ParseException {Absyn.Expr test;
 Absyn.Stmt thenStm;
 Absyn.Stmt elseStm = null;
    jj_consume_token(16);
    jj_consume_token(35);
    test = Expression();
    jj_consume_token(36);
    thenStm = Statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 17:{
      jj_consume_token(17);
      elseStm = Statement();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      ;
    }
{if ("" != null) return new Absyn.IfStmt(test, thenStm, elseStm);}
    throw new Error("Missing return statement in function");
}

  static final public Absyn.WhileStmt WhileCallStatement() throws ParseException {Absyn.Expr test;
 Absyn.Stmt body;
    jj_consume_token(15);
    jj_consume_token(35);
    test = Expression();
    jj_consume_token(36);
    body = Statement();
{if ("" != null) return new Absyn.WhileStmt(test, body);}
    throw new Error("Missing return statement in function");
}
